# sam-formatter

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: cli.rs  main.rs  pipeline.rs  reader.rs  record.rs  writer.rs
tests/: e2e.rs
