[package]
name = "sam-formatter"
version = "1.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# For Parquet file format support
arrow = "59.0.0"
# For powerful command-line argument parsing
clap = { version = "4.6.1", features = ["derive"] }
csv = "1.4.0"
parquet = { version = "59.0.0", features = ["arrow"] }
# SAM (text) and BAM (binary/BGZF) alignment readers. bam 0.90 depends on sam 0.85.
noodles-sam = "0.85"
noodles-bam = "0.90"
# RNG for --downsample (reservoir / Bernoulli sampling).
rand = "0.9"
